--- a/style.css
+++ b/style.css
@@ -1,323 +1,213 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Shrikhand&display=swap");
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers.
- */
-body {
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap");
+* {
   margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-main {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
- */
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10.
- */
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-button,
-[type=button],
-[type=reset],
-[type=submit] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
-  border-style: none;
   padding: 0;
+  box-sizing: border-box;
 }
 
-/**
- * Restore the focus styles unset by the previous rule.
- */
-button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+body {
+  font-family: "Roboto", sans-serif;
 }
 
-/**
- * Correct the padding in Firefox.
- */
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
+a {
+  text-decoration: none;
+  color: #000;
+  cursor: pointer;
 }
 
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
+header {
+  display: flex;
+  background-color: #fff;
+  justify-content: center;
+  width: 100%;
+  height: 80px;
+  -webkit-box-shadow: 0px 0px 12px 0px rgba(53, 53, 53, 0.5);
+  box-shadow: 0px 0px 12px 0px rgba(53, 53, 53, 0.5);
+  position: fixed;
+  z-index: 1;
+}
+header .logo {
+  width: 50vw;
+  padding: 20px;
+  padding-bottom: 15px;
 }
 
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-progress {
-  vertical-align: baseline;
+main {
+  width: 100%;
+  height: fit-content;
+  position: relative;
+  top: 80px;
+  z-index: 0;
+}
+main .location {
+  display: flex;
+  justify-content: center;
+  background-color: #e5e5e5;
+  color: rgb(62, 62, 62);
+  padding: 20px;
+}
+main .location h1 {
+  font-size: 1rem;
+  font-weight: 400;
+  padding-left: 15px;
+}
+main .intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f2f2f2;
+}
+main .intro h2 {
+  font-size: 6vw;
+  padding: 0 70px;
+  padding-top: 40px;
+  padding-bottom: 15px;
+  text-align: center;
+}
+main .intro p {
+  font-size: 4vw;
+  font-weight: 400;
+  padding: 0 50px;
+  padding-bottom: 30px;
+  text-align: center;
+  color: rgb(73, 72, 72);
+}
+main .intro input {
+  border-radius: 30px;
+  -webkit-box-shadow: rgba(40, 39, 39, 0.5) 0px 13px 27px -5px;
+  box-shadow: rgba(40, 39, 39, 0.5) 0px 13px 27px -5px;
+  border: none;
+  font-size: 4vw;
+  font-weight: 500;
+  padding: 15px 25px;
+  background: linear-gradient(to top, #9356DC, #FF79DA);
+  color: #fff;
+  margin-bottom: 50px;
+}
+main .working {
+  padding-top: 50px;
+}
+main .working h2 {
+  padding-left: 20px;
+  font-size: 6vw;
+}
+main .working .working-container {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+}
+main .working .working-container article {
+  background-color: #f2f2f2;
+  display: flex;
+  align-items: center;
+  -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px;
+  border: 1px transparent;
+  border-radius: 20px;
+  margin-bottom: 20px;
+  height: 10vh;
+}
+main .working .working-container article .number {
+  position: relative;
+  right: 15px;
+  border: 1px solid #9356DC;
+  background-color: #9356DC;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  border-radius: 30px;
+  line-height: 30px;
+  text-align: center;
+  font-size: 4vw;
+  font-weight: 400;
+}
+main .working .working-container article i {
+  font-size: 6.5vw;
+  padding-left: 10px;
+  padding-right: 30px;
+  color: rgb(78, 76, 76);
+}
+main .working .working-container article p {
+  font-size: 4vw;
+  font-weight: 500;
+}
+main .working .working-container article:hover {
+  background-color: #e8e3e3;
+}
+main .working .working-container article:hover i {
+  color: #9356DC;
+}
+main .restaurant {
+  background-color: #f2f2f2;
+  padding-top: 50px;
+}
+main .restaurant h2 {
+  padding-left: 20px;
+  font-size: 6vw;
+}
+main .restaurant .restaurant-container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+main .restaurant .restaurant-container article {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 30vh;
+  margin-bottom: 15px;
+  border-radius: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px;
+}
+main .restaurant .restaurant-container article .new {
+  width: 25%;
+  position: absolute;
+  color: rgb(40, 108, 114);
+  background-color: rgb(82, 218, 179);
+  border: none;
+  border-radius: 3px;
+  text-align: center;
+  padding: 5px 10px;
+  left: 67%;
+  margin-top: 10px;
+}
+main .restaurant .restaurant-container article .new p {
+  padding-left: 0;
+  font-size: 4vw;
+  font-weight: 500;
+}
+main .restaurant .restaurant-container article img {
+  width: 100%;
+  height: 190px;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+main .restaurant .restaurant-container article h3 {
+  padding: 5px 0 0 10px;
+  font-size: 1rem;
+  font-weight: 500;
+}
+main .restaurant .restaurant-container article p {
+  padding-left: 10px;
+  font-size: 1rem;
+  font-weight: 300;
+}
+main .restaurant .restaurant-container article .btn {
+  position: relative;
+  border: none;
+  left: 85%;
+  bottom: 15%;
+  font-size: 1.8rem;
 }
 
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-textarea {
-  overflow: auto;
+footer {
+  background-color: red;
+  width: 100%;
+  height: 500px;
 }
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-[type=search] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-/**
- * Add the correct display in IE 10+.
- */
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-[hidden] {
-  display: none;
-}
-
-:root {
-  --title: "Shrikhand", cursive;
-  --text: "Roboto", sans-serif;
-  --color1: #9356DC;
-  --color2: #FF79DA;
-  --color3: #99E2D0;
-}
-
-h1 {
-  font-family: var(--title);
+footer h3 {
+  font-family: "Shrikhand", cursive;
 }
 
 /*# sourceMappingURL=style.css.map */
