--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap');
 @import "utils/variable.scss";
 @import "base/reset.scss";
+@import "components/animations.scss";
 @import "components/loader.scss";
 @import "layouts/header.scss";
 @import "layouts/footer.scss";
