--- a/style.css
+++ b/style.css
@@ -19,6 +19,24 @@ li {
   list-style: none;
 }
 
+@keyframes loader {
+  100% {
+    transform: translateY(-30px);
+  }
+}
+@keyframes disappear {
+  to {
+    transform: scale(0);
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(-270deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
 .loader-container {
   position: fixed;
   background-color: #fff;
@@ -52,16 +70,6 @@ li {
   background-color: #99E2D0;
 }
 
-@keyframes loader {
-  100% {
-    transform: translateY(-30px);
-  }
-}
-@keyframes disappear {
-  to {
-    transform: scale(0);
-  }
-}
 header {
   display: flex;
   justify-content: center;
@@ -272,6 +280,138 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
 }
 main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom .fa-solid:hover {
   opacity: 1;
+}
+
+.header-menu {
+  display: flex;
+  align-items: center;
+}
+.header-menu i {
+  position: relative;
+  right: 50px;
+  font-size: 6vw;
+}
+
+.bg-menu {
+  width: 100%;
+  object-fit: contain;
+}
+
+.main-menu {
+  background-color: #e5e5e5;
+  border-top-left-radius: 35px;
+  border-top-right-radius: 35px;
+  padding: 20px 10px 50px;
+  position: relative;
+  z-index: 1;
+  bottom: 60px;
+}
+.main-menu .top-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15px 0 10px;
+}
+.main-menu .top-menu h2 {
+  font-family: "Shrikhand", cursive;
+  font-size: 6vw;
+}
+.main-menu .top-menu i {
+  font-size: 7vw;
+  position: absolute;
+  right: 40px;
+  cursor: pointer;
+}
+.main-menu .top-menu .fa-solid {
+  color: transparent;
+  background-image: linear-gradient(to top, #9356DC, #FF79DA);
+  transition: 1s ease-in-out;
+  background-clip: text;
+  opacity: 0;
+}
+.main-menu .top-menu .fa-solid:hover {
+  opacity: 1;
+}
+.main-menu .menu-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  padding-top: 30px;
+}
+.main-menu .menu-grid .menu-category {
+  overflow: hidden;
+}
+.main-menu .menu-grid .menu-category h3 {
+  font-weight: 300;
+  font-size: 4.5vw;
+  padding-bottom: 10px;
+  padding-left: 10px;
+}
+.main-menu .menu-grid .menu-category .menu-item {
+  background-color: white;
+  display: flex;
+  border-radius: 1rem;
+  box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin: 1rem;
+}
+.main-menu .menu-grid .menu-category .menu-item .menu-item-text {
+  padding: 10px;
+  overflow: hidden;
+}
+.main-menu .menu-grid .menu-category .menu-item h4 {
+  font-size: 4vw;
+  font-weight: 500;
+  padding-bottom: 3px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  margin: 0;
+}
+.main-menu .menu-grid .menu-category .menu-item p {
+  font-size: 3.7vw;
+  font-weight: 300;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  margin: 0;
+}
+.main-menu .menu-grid .menu-category .menu-item .price {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-left: auto;
+  font-weight: 700;
+  padding: 10px 20px;
+}
+.main-menu .menu-grid .menu-category .menu-item .check {
+  background-color: #99E2D0;
+  margin-right: -3.5rem;
+  width: 3.5rem;
+  border-radius: 0 1rem 1rem 0;
+  transition: margin-right 0.5s;
+  display: grid;
+  place-items: center;
+}
+.main-menu .menu-grid .menu-category .menu-item .check i {
+  display: grid;
+  place-items: center;
+  padding: 3px;
+  background-color: #fff;
+  color: #99E2D0;
+  font-size: 3vw;
+  font-weight: 700;
+  border-radius: 50%;
+}
+.main-menu .menu-grid .menu-category .menu-item:hover .check {
+  margin-right: 0;
+}
+.main-menu .menu-grid .menu-category .menu-item:hover i {
+  animation: spin 0.5s ease-in-out;
+}
+
+.mfooter {
+  position: relative;
 }
 
 /*# sourceMappingURL=style.css.map */
