--- a/sass/components/animations.scss
+++ b/sass/components/animations.scss
@@ -20,3 +20,14 @@ to {
         transform: rotate(0);
     }
 }
+
+@keyframes emergence {
+    0% {
+      transform:translateY(50%);
+      opacity: 0;
+    }
+    100% {
+        transform:translateY(0);
+        opacity: 1;
+    }
+  }
