--- a/sass/pages/homepage.scss
+++ b/sass/pages/homepage.scss
@@ -49,7 +49,7 @@ main {
             background: linear-gradient(to top, $color1, $color2);
             color: #fff;
             margin-bottom: 50px;
-            
+            cursor: pointer; 
         }
     }
 
@@ -189,8 +189,10 @@ main {
 
                     & .fa-solid {
                         color: transparent;
+                        -webkit-background-image: linear-gradient(to top, $color1, $color2);
                         background-image: linear-gradient(to top, $color1, $color2);
                         transition: 1s ease-in-out;
+                        -webkit-background-clip: text;
                         background-clip: text;
                         opacity: 0;
 
