--- a/style.css
+++ b/style.css
@@ -37,6 +37,16 @@ li {
     transform: rotate(0);
   }
 }
+@keyframes emergence {
+  0% {
+    transform: translateY(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 .loader-container {
   position: fixed;
   background-color: #fff;
@@ -45,9 +55,10 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: disappear 1s 3s;
+  animation: disappear 200ms 2s;
   animation-fill-mode: forwards;
   transform-origin: top;
+  opacity: 0.9;
   z-index: 999;
 }
 
@@ -153,6 +164,7 @@ main .intro input {
   background: linear-gradient(to top, #9356DC, #FF79DA);
   color: #fff;
   margin-bottom: 50px;
+  cursor: pointer;
 }
 main .working {
   padding-top: 50px;
@@ -273,8 +285,10 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
 }
 main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom .fa-solid {
   color: transparent;
+  -webkit-background-image: linear-gradient(to top, #9356DC, #FF79DA);
   background-image: linear-gradient(to top, #9356DC, #FF79DA);
   transition: 1s ease-in-out;
+  -webkit-background-clip: text;
   background-clip: text;
   opacity: 0;
 }
@@ -304,7 +318,7 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
   padding: 20px 10px 50px;
   position: relative;
   z-index: 1;
-  bottom: 60px;
+  margin-top: -4rem;
 }
 .main-menu .top-menu {
   display: flex;
@@ -324,8 +338,10 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
 }
 .main-menu .top-menu .fa-solid {
   color: transparent;
+  -webkit-background-image: linear-gradient(to top, #9356DC, #FF79DA);
   background-image: linear-gradient(to top, #9356DC, #FF79DA);
   transition: 1s ease-in-out;
+  -webkit-background-clip: text;
   background-clip: text;
   opacity: 0;
 }
@@ -335,17 +351,23 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
 .main-menu .menu-grid {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1rem;
   padding-top: 30px;
+}
+.main-menu .menu-grid h3 {
+  font-weight: 300;
+  font-size: 4.5vw;
+  padding-left: 10px;
+}
+.main-menu .menu-grid h3::after {
+  content: "";
+  display: flex;
+  margin-top: 5px;
+  width: 3rem;
+  height: 0.25rem;
+  background-color: #99E2D0;
 }
 .main-menu .menu-grid .menu-category {
   overflow: hidden;
-}
-.main-menu .menu-grid .menu-category h3 {
-  font-weight: 300;
-  font-size: 4.5vw;
-  padding-bottom: 10px;
-  padding-left: 10px;
 }
 .main-menu .menu-grid .menu-category .menu-item {
   background-color: white;
@@ -354,6 +376,17 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
   box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.1);
   overflow: hidden;
   margin: 1rem;
+  animation: emergence 1s;
+  animation-fill-mode: both;
+}
+.main-menu .menu-grid .menu-category .menu-item:nth-child(2) {
+  animation-delay: 200ms;
+}
+.main-menu .menu-grid .menu-category .menu-item:nth-child(3) {
+  animation-delay: 300ms;
+}
+.main-menu .menu-grid .menu-category .menu-item:nth-child(4) {
+  animation-delay: 400ms;
 }
 .main-menu .menu-grid .menu-category .menu-item .menu-item-text {
   padding: 10px;
@@ -409,9 +442,21 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
 .main-menu .menu-grid .menu-category .menu-item:hover i {
   animation: spin 0.5s ease-in-out;
 }
-
-.mfooter {
-  position: relative;
+.main-menu .buy {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+.main-menu .buy input {
+  border-radius: 30px;
+  box-shadow: rgba(40, 39, 39, 0.5) 0px 13px 27px -5px;
+  border: none;
+  font-size: 4vw;
+  font-weight: 500;
+  padding: 15px 45px;
+  background: linear-gradient(to top, #9356DC, #FF79DA);
+  color: #fff;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
