--- a/sass/pages/homepage.scss
+++ b/sass/pages/homepage.scss
@@ -9,10 +9,22 @@ main {
         color: rgb(62, 62, 62);
         padding: 20px;
 
+        & i {
+            font-size: 4vw;
+
+            @media ($desktop) {
+                font-size: 1.2vw;
+            }
+        }
+
         & h1 {
             font-size: 4vw;
             font-weight: 500;
             padding-left: 15px;
+
+            @media ($desktop) {
+                font-size: 1.2vw;
+            }
         }
     }
 
@@ -28,6 +40,10 @@ main {
             padding-top: 40px;
             padding-bottom: 15px;
             text-align: center;
+
+            @media ($desktop) {
+                font-size: 2vw;
+            }
         }
 
         & p {
@@ -37,6 +53,10 @@ main {
             padding-bottom: 30px;
             text-align: center;
             color: rgb(73, 72, 72);
+
+            @media ($desktop) {
+                font-size: 1.3vw;
+            }
         }
 
         & input {
@@ -50,6 +70,10 @@ main {
             color: #fff;
             margin-bottom: 50px;
             cursor: pointer; 
+
+            @media ($desktop) {
+                font-size: 1.3vw;
+            }
         }
     }
 
@@ -59,12 +83,22 @@ main {
         & h2 {
             padding-left: 20px;
             font-size: 6vw;
+
+            @media ($desktop) {
+                font-size: 2vw;
+            }
         }
 
         & .working-container {
             display: flex;
             flex-direction: column;
             padding: 30px;
+
+            @media ($desktop) {
+                flex-direction: row;
+                justify-content: space-around;
+
+            }
 
             & article {
                 background-color: #f2f2f2;
@@ -75,6 +109,10 @@ main {
                 border-radius: 20px;
                 margin-bottom: 20px;
                 height: 10vh;
+
+                @media ($desktop) {
+                    height: 10vh;
+                }
 
                 & .number {
                     position: relative;
@@ -89,6 +127,15 @@ main {
                     text-align: center;
                     font-size: 4vw;
                     font-weight: 400;
+
+                    @media ($desktop) {
+                        font-size: 1.3vw;
+                        width: 25px;
+                        height: 25px;
+                        border-radius: 25px;
+                        line-height: 25px;  
+                        right: 10px;               
+                    }
                 }
 
                 & i {
@@ -96,11 +143,23 @@ main {
                    padding-left: 10px;
                    padding-right: 30px; 
                    color: rgb(78, 76, 76);   
+
+                   @media ($desktop) {
+                    font-size: 1.3vw;
+                    padding-right: 10px;
+                    padding-left: 5px;
+                }
                 }
                 
                 & p {
-                    font-size: 4vw;
+                    font-size: clamp(1rem, 3vw, 1.5rem); 
+                    padding: 0 5px;
                     font-weight: 500;
+
+                    @media ($desktop) {
+                        font-size: 1.3vw;
+                        padding-right: 30px;
+                    }
                 }
             }
 
@@ -122,16 +181,27 @@ main {
         & h2 {
             padding-left: 20px;
             font-size: 6vw;
+
+            @media ($desktop) {
+                font-size: 2vw;
+            }
         }
 
         & .restaurant-container {
             display: flex;
             flex-direction: column;
             padding: 20px;
-       
+            
+            @media ($desktop) {
+                display: grid;
+                grid-template-columns: repeat(2,2fr);
+                column-gap: 1rem;
+            }
+
             & .restaurant-card {
                 display: flex;
                 flex-direction: column;
+                position: relative;
                 width: 100%;
                 margin-bottom: 15px;
                 border-radius: 20px;
@@ -146,14 +216,16 @@ main {
                     border-radius: 3px;
                     text-align: center;
                     padding: 5px 10px;
-                    left: 67%;
-                    margin-top: 10px;
-                    
-                    & p {
-                        padding-left: 0;
-                        font-size: 4vw;
-                        font-weight: 500;
-                    }
+                    right: 1rem;
+                    top: 0.5rem;
+                    font-size: 4vw;
+                    font-weight: 500;
+
+                    @media ($desktop) {    
+                        font-size: 1.3vw;
+                        width: 15%;
+                        padding-left: 10px;    
+                      }
                 }
                 
                 & img {
@@ -173,11 +245,19 @@ main {
                         padding-bottom: 1px;
                         font-size: 5vw; 
                         font-weight: 500;
+
+                        @media ($desktop) {
+                          font-size: 1.5vw;
+                        }
                     }
     
                     & p {
                         font-size: 4.5vw;
                         font-weight: 300;
+
+                        @media ($desktop) {
+                            font-size: 1.4vw;
+                          }
                     }
     
                     & i {
@@ -185,6 +265,10 @@ main {
                         position: absolute;    
                         right: 40px; 
                         cursor: pointer; 
+
+                        @media ($desktop) {    
+                            font-size: 3vw;
+                        }
                     }
 
                     & .fa-solid {
