--- a/sass/utils/variable.scss
+++ b/sass/utils/variable.scss
@@ -3,5 +3,4 @@ $text: 'Roboto', sans-serif;
 $color1: #9356DC;
 $color2: #FF79DA;
 $color3: #99E2D0;
-$tablet: "only screen and min-width: 768px";
-$desktop: "only screen and min-width: 992px";
+$desktop: "min-width: 1000px";
