--- a/style.css
+++ b/style.css
@@ -95,6 +95,11 @@ header .logo {
   font-family: "Shrikhand", cursive;
   text-align: center;
 }
+@media (min-width: 1000px) {
+  header .logo {
+    font-size: 3vw;
+  }
+}
 
 footer {
   background-color: #353535;
@@ -108,13 +113,28 @@ footer h3 {
   padding-bottom: 20px;
   font-size: 5vw;
 }
+@media (min-width: 1000px) {
+  footer h3 {
+    font-size: 2vw;
+  }
+}
 footer li {
   margin-bottom: 10px;
   font-size: 4vw;
 }
+@media (min-width: 1000px) {
+  footer li {
+    font-size: 1.3vw;
+  }
+}
 footer i {
   padding-right: 10px;
   font-size: 4vw;
+}
+@media (min-width: 1000px) {
+  footer i {
+    font-size: 1.3vw;
+  }
 }
 
 main {
@@ -128,10 +148,23 @@ main .location {
   color: rgb(62, 62, 62);
   padding: 20px;
 }
+main .location i {
+  font-size: 4vw;
+}
+@media (min-width: 1000px) {
+  main .location i {
+    font-size: 1.2vw;
+  }
+}
 main .location h1 {
   font-size: 4vw;
   font-weight: 500;
   padding-left: 15px;
+}
+@media (min-width: 1000px) {
+  main .location h1 {
+    font-size: 1.2vw;
+  }
 }
 main .intro {
   display: flex;
@@ -146,6 +179,11 @@ main .intro h2 {
   padding-bottom: 15px;
   text-align: center;
 }
+@media (min-width: 1000px) {
+  main .intro h2 {
+    font-size: 2vw;
+  }
+}
 main .intro p {
   font-size: 4vw;
   font-weight: 400;
@@ -153,6 +191,11 @@ main .intro p {
   padding-bottom: 30px;
   text-align: center;
   color: rgb(73, 72, 72);
+}
+@media (min-width: 1000px) {
+  main .intro p {
+    font-size: 1.3vw;
+  }
 }
 main .intro input {
   border-radius: 30px;
@@ -166,6 +209,11 @@ main .intro input {
   margin-bottom: 50px;
   cursor: pointer;
 }
+@media (min-width: 1000px) {
+  main .intro input {
+    font-size: 1.3vw;
+  }
+}
 main .working {
   padding-top: 50px;
 }
@@ -173,10 +221,21 @@ main .working h2 {
   padding-left: 20px;
   font-size: 6vw;
 }
+@media (min-width: 1000px) {
+  main .working h2 {
+    font-size: 2vw;
+  }
+}
 main .working .working-container {
   display: flex;
   flex-direction: column;
   padding: 30px;
+}
+@media (min-width: 1000px) {
+  main .working .working-container {
+    flex-direction: row;
+    justify-content: space-around;
+  }
 }
 main .working .working-container article {
   background-color: #f2f2f2;
@@ -187,6 +246,11 @@ main .working .working-container article {
   border-radius: 20px;
   margin-bottom: 20px;
   height: 10vh;
+}
+@media (min-width: 1000px) {
+  main .working .working-container article {
+    height: 10vh;
+  }
 }
 main .working .working-container article .number {
   position: relative;
@@ -202,15 +266,39 @@ main .working .working-container article .number {
   font-size: 4vw;
   font-weight: 400;
 }
+@media (min-width: 1000px) {
+  main .working .working-container article .number {
+    font-size: 1.3vw;
+    width: 25px;
+    height: 25px;
+    border-radius: 25px;
+    line-height: 25px;
+    right: 10px;
+  }
+}
 main .working .working-container article i {
   font-size: 6.5vw;
   padding-left: 10px;
   padding-right: 30px;
   color: rgb(78, 76, 76);
 }
+@media (min-width: 1000px) {
+  main .working .working-container article i {
+    font-size: 1.3vw;
+    padding-right: 10px;
+    padding-left: 5px;
+  }
+}
 main .working .working-container article p {
-  font-size: 4vw;
+  font-size: clamp(1rem, 3vw, 1.5rem);
+  padding: 0 5px;
   font-weight: 500;
+}
+@media (min-width: 1000px) {
+  main .working .working-container article p {
+    font-size: 1.3vw;
+    padding-right: 30px;
+  }
 }
 main .working .working-container article:hover {
   background-color: #e8e3e3;
@@ -226,14 +314,27 @@ main .restaurant h2 {
   padding-left: 20px;
   font-size: 6vw;
 }
+@media (min-width: 1000px) {
+  main .restaurant h2 {
+    font-size: 2vw;
+  }
+}
 main .restaurant .restaurant-container {
   display: flex;
   flex-direction: column;
   padding: 20px;
 }
+@media (min-width: 1000px) {
+  main .restaurant .restaurant-container {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    column-gap: 1rem;
+  }
+}
 main .restaurant .restaurant-container .restaurant-card {
   display: flex;
   flex-direction: column;
+  position: relative;
   width: 100%;
   margin-bottom: 15px;
   border-radius: 20px;
@@ -248,13 +349,17 @@ main .restaurant .restaurant-container .restaurant-card .new {
   border-radius: 3px;
   text-align: center;
   padding: 5px 10px;
-  left: 67%;
-  margin-top: 10px;
-}
-main .restaurant .restaurant-container .restaurant-card .new p {
-  padding-left: 0;
+  right: 1rem;
+  top: 0.5rem;
   font-size: 4vw;
   font-weight: 500;
+}
+@media (min-width: 1000px) {
+  main .restaurant .restaurant-container .restaurant-card .new {
+    font-size: 1.3vw;
+    width: 15%;
+    padding-left: 10px;
+  }
 }
 main .restaurant .restaurant-container .restaurant-card img {
   width: 100%;
@@ -273,15 +378,30 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
   font-size: 5vw;
   font-weight: 500;
 }
+@media (min-width: 1000px) {
+  main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom h3 {
+    font-size: 1.5vw;
+  }
+}
 main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom p {
   font-size: 4.5vw;
   font-weight: 300;
+}
+@media (min-width: 1000px) {
+  main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom p {
+    font-size: 1.4vw;
+  }
 }
 main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom i {
   font-size: 8vw;
   position: absolute;
   right: 40px;
   cursor: pointer;
+}
+@media (min-width: 1000px) {
+  main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom i {
+    font-size: 3vw;
+  }
 }
 main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom .fa-solid {
   color: transparent;
@@ -305,6 +425,11 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
   right: 50px;
   font-size: 6vw;
 }
+@media (min-width: 1000px) {
+  .header-menu i {
+    font-size: 3vw;
+  }
+}
 
 .bg-menu {
   width: 100%;
@@ -321,6 +446,12 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
   z-index: 1;
   margin-top: -4rem;
 }
+@media (min-width: 1000px) {
+  .main-menu {
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+}
 .main-menu .top-menu {
   display: flex;
   justify-content: space-between;
@@ -331,11 +462,21 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
   font-family: "Shrikhand", cursive;
   font-size: 6vw;
 }
+@media (min-width: 1000px) {
+  .main-menu .top-menu h2 {
+    font-size: 2vw;
+  }
+}
 .main-menu .top-menu i {
   font-size: 7vw;
   position: absolute;
   right: 40px;
   cursor: pointer;
+}
+@media (min-width: 1000px) {
+  .main-menu .top-menu i {
+    font-size: 3vw;
+  }
 }
 .main-menu .top-menu .fa-solid {
   color: transparent;
@@ -354,10 +495,20 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
   grid-template-columns: 1fr;
   padding-top: 30px;
 }
+@media (min-width: 1000px) {
+  .main-menu .menu-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 .main-menu .menu-grid h3 {
   font-weight: 300;
   font-size: 4.5vw;
   padding-left: 10px;
+}
+@media (min-width: 1000px) {
+  .main-menu .menu-grid h3 {
+    font-size: 2vw;
+  }
 }
 .main-menu .menu-grid h3::after {
   content: "";
@@ -405,6 +556,11 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
   overflow: hidden;
   margin: 0;
 }
+@media (min-width: 1000px) {
+  .main-menu .menu-grid .menu-category .menu-item h4 {
+    font-size: 1.3vw;
+  }
+}
 .main-menu .menu-grid .menu-category .menu-item p {
   font-size: 3.7vw;
   font-weight: 300;
@@ -412,6 +568,11 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
   text-overflow: ellipsis;
   overflow: hidden;
   margin: 0;
+}
+@media (min-width: 1000px) {
+  .main-menu .menu-grid .menu-category .menu-item p {
+    font-size: 1.3vw;
+  }
 }
 .main-menu .menu-grid .menu-category .menu-item .price {
   display: flex;
@@ -440,6 +601,11 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
   font-weight: 700;
   border-radius: 50%;
 }
+@media (min-width: 1000px) {
+  .main-menu .menu-grid .menu-category .menu-item .check i {
+    font-size: 1.3vw;
+  }
+}
 .main-menu .menu-grid .menu-category .menu-item:hover .check {
   margin-right: 0;
 }
@@ -461,6 +627,11 @@ main .restaurant .restaurant-container .restaurant-card .restaurant-card-bottom 
   background: linear-gradient(to top, #9356DC, #FF79DA);
   color: #fff;
   cursor: pointer;
+}
+@media (min-width: 1000px) {
+  .main-menu .buy input {
+    font-size: 1.3vw;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
